Fix overflow issue

--- a/django/climate_change_api/user_management/static/scss/layout/_navbar.scss
+++ b/django/climate_change_api/user_management/static/scss/layout/_navbar.scss
@@ -88,6 +88,7 @@
 
   .dropdown-toggle {
     padding-left: 12px;
+    padding-right: 17px;
   }
 }
 
