--- a/django/climate_change_api/user_management/static/scss/pages/_home.scss
+++ b/django/climate_change_api/user_management/static/scss/pages/_home.scss
@@ -368,10 +368,6 @@ header {
   max-width: 141px;
 }
 
-.navbar-right {
-  margin-right: -18px !important;
-}
-
 .alert-danger {
   background-color: #FF0043 !important;
   color: #fff;
